welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: not found: type valeur
    return nums[valeur]
                ^indexOfValue:4: error: value nums of type Array[Int] does not take type parameters.
    return nums[valeur]
               ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to (nums.length - 1)) {
         ^